kubernetes/apps/kube-public/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-public
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
